--- a/docs/assets/styles/resets.css
+++ b/docs/assets/styles/resets.css
@@ -1,25 +1,13 @@
 
-*,
-*::before,
-*::after {
+:is(*, ::before, ::after) {
     box-sizing: border-box;
 }
 
-h1,
-h2,
-h3,
-h4 {
+:is(h1, h2, h3, h4) {
     line-height: 1.2;
 }
 
-body,
-h1,
-h2,
-h3,
-dl,
-dt,
-dd,
-p {
+:is(body, h1, h2, h3, dl, dt, dd, p) {
     margin:0;
 }
 
@@ -29,8 +17,7 @@ img {
     display: block;
 }
 
-ul,
-ol {
+:is(ul, ol, fieldset, legend) {
     margin: 0;
     padding: 0;
 }
@@ -39,7 +26,7 @@ summary {
     list-style: none;
 }
 
-button {
+:is(button, fieldset) {
     border: none;
 }
 dialog {
