--- a/src/styles/screen_styles.styl
+++ b/src/styles/screen_styles.styl
@@ -11,6 +11,11 @@ inlineFlex(gap=.5em)
     display: inline-flex
     gap: var(--items-space, gap)
     align-items: center
+leftArrowDeco(size, ratio, color)
+    content: ""
+    decoElt(size, ratio, color)
+    clip-path: url(#arrow_left)
+
 
 darkShade()
     --color-text: var(--system-color-lightGrayishBlue)
@@ -26,6 +31,7 @@ darkShade()
     --color-warningFill: hsla(34, 5, 95, 0.15)
     --color-successFill: hsla(159, 5, 95, 0.15)
     --color-editText: var(--system-color-softPurple)
+    --input-bd-clr: hsl(233, 30, 21)
 
     --fill-items-box: hsl(233, 30, 21)
     --fill-amount-box: hsl(228, 29, 7)
@@ -100,6 +106,8 @@ body
     line-height: 1.5
     font-size: 1rem
     font-weight: 500
+    font-variant-ligatures: common-ligatures
+    font-variant-numeric: slashed-zero
     color: var(--system-color-text)
     background-color: var(--system-color-fillPrimary)
     accent-color: var(--system-color-softBlue)
@@ -177,9 +185,7 @@ section
     inlineFlex()
 [data-icon="arrow_left"]
     &::before
-        content: ""
-        decoElt(1.5rem, 1, var(--system-color-softBlue))
-        clip-path: url(#arrow_left)
+        leftArrowDeco(1.5rem, 1, var(--system-color-softBlue))
 [data-icon="arrow_down"]
     --min-padding: .75em 1.5em .75em 0
     --space: 0.1em
@@ -296,6 +302,7 @@ section
     --icon-fill: var(--system-color-softPurple)
     --min-padding: 0 1.5em
     background-color: var(--system-color-darkPurple)
+    z-index: 2
 
 .invoices:empty
     display: none
@@ -400,6 +407,66 @@ step-by-step
         visibility: hidden
         opacity: 0
 
+[data-drawer="show"] &
+    --x-offset: 0px
+.drawer
+    --translateY: var(--y-offset, 72px)
+    position: fixed
+    transform: translate(var(--x-offset, -100%), var(--translateY))
+    block-size: calc(100% - var(--translateY))
+    inset-block-start: 0
+    isolation: isolate
+    text-transform: capitalize
+.input-step
+    --space: 1.25rem
+    container: input-step / inline-size
+    padding: .5rem
+    min-block-size: 70vb
+    & > legend
+        font-size: clamp(0.8 * 1.5em, 4cqi, 1.5em)
+        color: var(--system-color-softBlue)
+
+    & > div
+        display: flex
+        flex-flow: column-reverse nowrap
+    input
+        min-inline-size: 100%
+        font-weight: bold
+        color: var(--system-color-text)
+        padding: var(--input-padding, .75em 1.25em)
+        background-color: var(--system-color-blank)
+        border: 1px solid var(--input-bd-clr, var(--system-color-lightPurple))
+        border-radius: .25em
+        &:hover
+            --input-bd-clr: var(--system-color-softBlue)
+date-picker
+    position: relative
+    isolation: isolate
+    font-weight: bold
+    &[data-show]
+        --calendar-display: grid
+    [disabled]
+        opacity: 0.6
+    & [data-action="previous month"]::before,
+    & [data-action="next month"]::before
+        leftArrowDeco(1.5rem, 1, var(--system-color-softBlue))
+        display: inline-block
+    & [data-action="next month"]::before
+        transform: rotateZ(180deg)
+    .today
+        --label-color: var(--system-color-limeGreen)
+    .selected
+        --label-color: var(--system-color-softBlue)
+    button
+        font-weight: inherit
+        background-color: transparent
+        color: var(--label-color, var(--color-labelText, hsl(228, 29, 7)))
+    .actions
+        display: flex
+        justify-content: space-between
+        align-items: center
+        grid-column: -1 / 1
+
 @media screen and (min-width: 480px)
     :root
         --invoice-grid: "ref date name total status arrow" / 8ch 1fr 1fr .8fr .75fr 1.5em
@@ -470,5 +537,18 @@ step-by-step
     :is(h1, h2, h3, h4, p, dd, .heading-l, .fluid-type) {
         font-size: clamp(var(--f-size) - var(--f-size) * var(--f-size-diff, 0.3), var(--f-size-fluid, 5cqi), var(--f-size));
     }
+}
+.drawer {
+    inline-size: min(616px, 100%);
+}
+date-picker > .calendar-grid {
+    display: var(--calendar-display, none);
+    grid-template-columns: repeat(7, auto);
+    position: absolute;
+    inset-block-start: var(--bottom, calc(100% + .5rem));
+    background-color: var(--system-color-blank);
+    border-radius: .5rem;
+    padding: .35em .75em 1em;
+    gap: .25em;
 }
 }
