--- a/src/styles/screen_styles.styl
+++ b/src/styles/screen_styles.styl
@@ -307,6 +307,7 @@ section
     --alignment: stretch
     --icon-fill: var(--system-color-softPurple)
     --min-padding: 0 1.5em
+    --row-align: stretch
     background-color: var(--system-color-darkPurple)
     position: relative
     z-index: 2
@@ -439,20 +440,17 @@ step-by-step
     & > form
         max-block-size: 70%
         overflow: hidden auto
-    & > .row
+    & > div
         --prefix-color: currentColor
         --min-padding: .75em clamp(0.5em, 3cqi, 1.5em)
-        --space: 0.5rem
+        display: flex
+        gap: .5em
         justify-content: end
         container: actions / inline-size
-        position: absolute
-        inset-inline: 0
-        inset-block-end: 0
-        padding: 1em clamp(0.5em, 4cqi, 1.25em)
         background-color: var(--system-color-fillPrimary)
-        & > .btn-draft
-            margin-inline-start: auto
-            display: var(--drafter-display, initial)
+    .btn-draft
+        margin-inline-start: auto
+        display: var(--drafter-display, initial)
     .cancel
         --prefix: var(--cancel-text, unset)
     .proceed
@@ -462,12 +460,10 @@ step-by-step
     --prefix: initial
     display: var(--ref-display, none)
 
-
 .input-step
     --space: 1.25rem
     container: input-step / inline-size
     padding: .5rem
-    min-block-size: 70vb
     & > legend
         font-size: clamp(0.8 * 1.5em, 4cqi, 1.5em)
         color: var(--system-color-softBlue)
@@ -512,6 +508,50 @@ date-picker
         justify-content: space-between
         align-items: center
         grid-column: -1 / 1
+
+.step-indicator
+    --deco-size: 1.7em
+    --bdr-width: 2px
+    --deco-width-fistHalf: calc(50% - .85em - 2px)
+    --deco-color: red
+    p
+        text-align: center
+        display: none
+    & > *
+        padding-block-end: 2em
+        counter-increment: indicator
+        position: relative
+        &:first-child
+            --deco-img: linear-gradient(to right, transparent calc(1.7em + 2px), var(--deco-color) 0)
+            --deco-margin: 0 auto
+
+        &:last-child
+            --deco-img: linear-gradient(to left,  transparent calc(1.7em + 4px), var(--deco-color) 0)
+            --deco-margin: auto 0
+        &:not(:last-child, :first-child)
+            padding-inline: .5em
+        &::after
+            content: counters(indicator, ".")
+            position: absolute
+            display: inline-grid
+            place-content: center;
+            border: var(--bdr-width) solid red
+            border-radius: 50%
+            inline-size: var(--deco-size)
+            aspect-ratio: 1
+            inset-inline: 0
+            inset-block-end: 0
+            margin-inline: var(--deco-margin, auto)
+
+        &::before
+            content: ""
+            position: absolute
+            display: inline-block
+            block-size: 2px
+            inset-block-end: calc(.85em - 1px)
+            inset-inline: 0
+            background-image: var(--deco-img, linear-gradient(to right, var(--deco-color) calc(50% - .85em - 2px), transparent 0 calc(50% + .85em + 2px), var(--deco-color) 0))
+
 
 @media screen and (min-width: 480px)
     :root
@@ -573,7 +613,6 @@ date-picker
         --direction: column
         --min-padding: 1.5em 0
         --row-dir: column
-        --row-align: stretch
         grid-area: nav
         border-radius: 0 1.25em 1.25em 0
         .theme-switch
@@ -609,5 +648,10 @@ date-picker > .calendar-grid {
     border-radius: .5rem;
     padding: .35em .75em 1em;
     gap: .25em;
+}
+.step-indicator {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    font-size: 0.8em;
 }
 }
